[gd_scene load_steps=16 format=2]

[ext_resource path="res://motion_ai/pawn/mob_state/sprite_states_wait02.png" type="Texture" id=1]
[ext_resource path="res://motion_ai/pawn/pawn_revision01_normal_c01.tres" type="SpriteFrames" id=2]
[ext_resource path="res://util/SpriteShadowMaterial.tres" type="Material" id=3]
[ext_resource path="res://motion_ai/pawn/UnitPawn.gd" type="Script" id=4]
[ext_resource path="res://motion_ai/pawn/mob_state/sprite_states_march01.png" type="Texture" id=5]
[ext_resource path="res://motion_ai/pawn/mob_state/sprite_states_wait01.png" type="Texture" id=6]
[ext_resource path="res://motion_ai/pawn/mob_state/sprite_states_attack02.png" type="Texture" id=7]
[ext_resource path="res://motion_ai/pawn/mob_state/sprite_states_brace02.png" type="Texture" id=8]
[ext_resource path="res://motion_ai/pawn/mob_state/sprite_states_brace01.png" type="Texture" id=9]
[ext_resource path="res://motion_ai/pawn/mob_state/sprite_states_attack01.png" type="Texture" id=10]
[ext_resource path="res://motion_ai/pawn/mob_state/sprite_states_march02.png" type="Texture" id=11]
[ext_resource path="res://motion_ai/common/KinematicDriver.tscn" type="PackedScene" id=12]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.26, 0.805, 0.26 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.26, 0.66, 0.26 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 11 ) ],
"loop": true,
"name": "debug_march",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "debug_wait",
"speed": 1.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "debug_attack",
"speed": 1.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "debug_brace",
"speed": 1.0
} ]

[node name="UnitPawn" type="KinematicBody"]
collision_layer = 8
collision_mask = 13
script = ExtResource( 4 )

[node name="IdealCollisionBox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.063, 0 )
shape = SubResource( 3 )
disabled = true

[node name="ActualCollisionBox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.208, 0 )
shape = SubResource( 4 )

[node name="StateSprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
visible = false
material_override = ExtResource( 3 )
pixel_size = 0.0078
frames = SubResource( 2 )
animation = "debug_march"
frame = 1
playing = true

[node name="VisualSprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0.07, 0 )
material_override = ExtResource( 3 )
pixel_size = 0.014
frames = ExtResource( 2 )
animation = "southwest_idle"
playing = true

[node name="KinematicDriver" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.74593, 0 )
visible = false
drive_body = NodePath("..")
float_height = 0.29
[connection signal="target_reached" from="KinematicDriver" to="." method="_on_KinematicDriver_target_reached"]
